--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "styled-jsx": "^3.2.3",
+    "styled-jsx-plugin-sass": "^1.0.0",
     "url-loader": "^2.2.0"
   },
   "devDependencies": {
