--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev",
+    "dev": "node .",
     "start": "next start",
     "build": "next build"
   },
@@ -16,12 +16,21 @@
   "author": "Quang Dat Pham <quangdat2000.pham@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@hapi/joi": "^16.1.7",
     "@svgr/webpack": "^4.3.3",
     "@zeit/next-sass": "^1.0.1",
+    "apollo-boost": "^0.4.4",
+    "apollo-datasource-rest": "^0.6.6",
+    "apollo-server": "^2.9.7",
     "classnames": "^2.2.6",
+    "co": "^4.6.0",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
+    "mongodb": "^3.3.3",
     "next": "^9.1.2",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
@@ -32,6 +41,7 @@
     "url-loader": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.6.0"
+    "@babel/plugin-proposal-decorators": "^7.6.0",
+    "nodemon": "^1.19.4"
   }
 }
