--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node .",
+    "dev": ". ./development.env.sh && node .",
     "start": "next start",
     "build": "next build"
   },
