--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": ". ./development.env.sh && node .",
-    "start": "next start",
+    "dev": ". ./development.env.sh && nodemon .",
+    "start": "node .",
     "build": "next build"
   },
   "keywords": [
@@ -24,11 +24,15 @@
     "apollo-boost": "^0.4.4",
     "apollo-datasource-rest": "^0.6.6",
     "apollo-server": "^2.9.7",
+    "await-to-js": "^2.1.1",
     "bcrypt": "^3.0.6",
     "classnames": "^2.2.6",
     "co": "^4.6.0",
+    "express-jwt": "^5.3.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "http-status": "^1.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
     "mongodb": "^3.3.3",
