--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apollo-boost": "^0.4.4",
     "apollo-datasource-rest": "^0.6.6",
     "apollo-server": "^2.9.7",
+    "apollo-server-express": "^2.9.7",
     "await-to-js": "^2.1.1",
     "bcrypt": "^3.0.6",
     "classnames": "^2.2.6",
@@ -41,6 +42,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "schemaglue": "^4.0.4",
     "styled-jsx": "^3.2.3",
     "styled-jsx-plugin-sass": "^1.0.0",
     "url-loader": "^2.2.0"
