--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": ". ./development.env.sh && nodemon .",
+    "dev": ". ./development.env.sh && nodemon -e js,graphql,json .",
     "start": "node .",
     "build": "next build"
   },
@@ -26,9 +26,11 @@
     "apollo-server": "^2.9.7",
     "apollo-server-express": "^2.9.7",
     "await-to-js": "^2.1.1",
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "classnames": "^2.2.6",
     "co": "^4.6.0",
+    "express-joi-validation": "^4.0.1",
     "express-jwt": "^5.3.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
