--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apollo-datasource-rest": "^0.6.6",
     "apollo-server": "^2.9.7",
     "apollo-server-express": "^2.9.7",
+    "app-root-path": "^3.0.0",
     "await-to-js": "^2.1.1",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
@@ -34,11 +35,13 @@
     "express-jwt": "^5.3.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "helmet": "^3.21.2",
     "http-status": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
     "mongodb": "^3.3.3",
+    "morgan": "^1.9.1",
     "next": "^9.1.2",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
@@ -47,7 +50,8 @@
     "schemaglue": "^4.0.4",
     "styled-jsx": "^3.2.3",
     "styled-jsx-plugin-sass": "^1.0.0",
-    "url-loader": "^2.2.0"
+    "url-loader": "^2.2.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.6.0",
