--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^3.0.6",
     "classnames": "^2.2.6",
     "co": "^4.6.0",
+    "cookie-parser": "^1.4.4",
     "express-joi-validation": "^4.0.1",
     "express-jwt": "^5.3.1",
     "graphql": "^14.5.8",
