--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": ". ./development.env.sh && nodemon -e js,graphql,json .",
+    "dev": ". ./development.env.sh && nodemon --inspect -e js,graphql,json .",
     "start": "node .",
     "build": "next build"
   },
